# Catalyst

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  \  a  brute.py  install.sh  py.py  save.bat  save.sh  setup.bat  setup.sh  splitting.py  state_gen.rbg  test.bat  test.sh  test_cc.sh
core/: Cargo.toml
core/src/: generator.rs  lib.rs  scope_builder.rs  state.rs  subcommand.rs
incr/: Cargo.toml
incr/src/: lib.rs
instance/: Cargo.toml
instance/src/: error.rs  func.rs  lib.rs  logic.rs  mir.rs  repr.rs  size.rs  state.rs  types.rs
instance/src/mir/: block.rs  inst.rs  mod.rs  value.rs
instance_types/: Cargo.toml
instance_types/src/: error.rs  func.rs  lib.rs  mir.rs  patterns.rs  repr.rs  size.rs  state.rs  types.rs
ownership/: Cargo.toml
ownership/src/: drop_solver.rs  error.rs  lib.rs  ownership_solver.rs  state.rs  types.rs
parser/: Cargo.toml  test_out.txt
parser/src/: ast.rs  error.rs  lib.rs  logic.rs
stages/borrowc/: Cargo.toml
stages/borrowc/src/: builder.rs  ctx.rs  display.rs  lib.rs  patterns.rs
stages/lexing/: Cargo.toml
stages/lexing/src/: ctl.rs  diagnostic.rs  lexer.rs  lib.rs  line_mapper.rs  span.rs  token.rs
stages/mir/: Cargo.toml
stages/mir/src/: builder.rs  ctx.rs  display.rs  lib.rs  logic.rs  mir_builder.rs  moves.rs  patterns.rs
stages/packaging/: Cargo.toml  test.bat
stages/packaging/src/: lib.rs  packages.rs  scheduler.rs  version.rs
stages/parsing/: Cargo.toml  test.bat
stages/parsing/src/: ast.rs  lib.rs  parser.rs
stages/type-checking/: Cargo.toml
stages/type-checking/src/: fn_parser.rs  item_collector.rs  lib.rs  ty_builder.rs  ty_parser.rs
stages/typec/: Cargo.toml
stages/typec/src/: context.rs  ctx.rs  lib.rs  tir_display.rs  util.rs
subcommands/fmt/: Cargo.toml
subcommands/fmt/src/: betweens_lexer.rs  fmt.rs  items.rs  length.rs  lib.rs
subcommands/lsp/: Cargo.toml
subcommands/lsp/src/: lib.rs
subcommands/lsp/tree-sitter-catalyst/: grammar.js  package-lock.json  package.json  tsconfig.json
subcommands/middleware/: Cargo.toml
subcommands/middleware/src/: incremental.rs  lib.rs  logic.rs  scheduler.rs
tests/gen-test/: Cargo.toml  a.out  perf.data  perf.data.old
tests/gen-test/incemental/: default.ctl
tests/gen-test/incremental/: default.rkyv
tests/gen-test/src/: main.rs
tests/gen-test/test_out/: additional-param-garbage.txt  array.txt  auto-ref-deref-parse-out.txt  auto-ref-deref.txt  cast-mismatch.txt  cast-parse-out.txt  cast.txt  compile-time-parse-out.txt  compile-time.txt  constant-structures.txt  constants-control-flow.txt  constants-pointers.txt  constants-with-calls.txt  constants.txt  convert-scalars.txt  drop-gen.txt  empty.txt  enum-drop-parse-out.txt  enum-drop.txt  enum-parse-out.txt  enum-stress-parse-out.txt  enum-stress.txt  enum.txt  external-parse-out.txt  external.txt  floats.txt  functions-parse-out.txt  functions.txt  generic-parse-out.txt  generic-spec.txt  generic.txt  if-statement-parse-out.txt  if-statement.txt  iterative-fib.txt  let-binding.txt  long-const-compute.txt  match-parse-out.txt  match-with-struct-return-parse-out.txt  match-with-struct-return.txt  match.txt  (+15 more)
tests/mir-test/: Cargo.toml
tests/mir-test/incemental/: default.ctl
tests/mir-test/incremental/: default.rkyv
tests/mir-test/src/: main.rs
tests/mir-test/test_out/: additional-param-garbage.txt  auto-ref-deref-parse-out.txt  auto-ref-deref.txt  compile-time.txt  constants.txt  drop-gen-parse-out.txt  drop-gen.txt  enum.txt  functions.txt  if-statement.txt  let-binding.txt  loop-drops-parse-out.txt  loop-drops.txt  loop-outsider.txt  macro-impl-parse-out.txt  macro-impl.txt  match-with-missing-patterns.txt  match-with-struct-return.txt  match.txt  partial-moves-parse-out.txt  partial-moves.txt  register struct init and use.txt  simple-moves-parse-out.txt  simple-moves.txt  vec-test-parse-out.txt  vec-test.txt
tests/packaging-test/: Cargo.toml
tests/packaging-test/incemental/: default.ctl
tests/packaging-test/incremental/: default.rkyv
tests/packaging-test/src/: main.rs
tests/packaging-test/test_out/: cycle-parse-out.txt  cycle.txt  github-parse-out.txt  github.txt  invalid-link-parse-out.txt  invalid-link.txt  invalid-module-parse-out.txt  invalid-module.txt  invalid-version-parse-out.txt  invalid-version.txt  package-cycle-parse-out.txt  package-cycle.txt  self-import-parse-out.txt  self-import.txt
tests/parsing-test/: Cargo.toml
tests/parsing-test/incemental/: default.ctl
tests/parsing-test/incremental/: default.rkyv
tests/parsing-test/src/: main.rs
tests/parsing-test/test_out/: attributes-parse-out.txt  attributes.txt  binary-operators.txt  bound-parse-out.txt  bound.txt  if-statement.txt  impl-block-parse-out.txt  impl-block.txt  let-binding-loop-parse-out.txt  let-binding-loop.txt  let-binding.txt  long-const-compute.txt  match-parse-out.txt  match.txt  one-line-struct-parse-out.txt  one-line-struct.txt  spec-parse-out.txt  spec.txt  struct-ast-parse-out.txt  struct-ast.txt
tests/type-checking-test/: Cargo.toml
tests/type-checking-test/src/: main.rs
tests/type-checking-test/test_out/: basic-structs.txt  binary-operators-and-precedence.txt  bound-associated-types.txt  bound.txt  complex-bound-in-use.txt  complex-bound-use.txt  cross-module-collision-fixed.txt  cross-module-collision.txt  cross-module.txt  function-calls.txt  function-with-return.txt  functions.txt  generic-structs.txt
tests/typec-test/: Cargo.toml
tests/typec-test/incemental/: default.ctl
typec/: Cargo.toml
typec/src/: bound_verifier.rs  builder.rs  builtin_builder.rs  collector.rs  error.rs  func.rs  func_builder.rs  global.rs  ident_hasher.rs  lib.rs  logic.rs  ownership.rs  scope.rs  state.rs  tir.rs  ty.rs  ty_builder.rs  ty_parser.rs
typec_types/: Cargo.toml
typec_types/src/: bound_checker.rs  error.rs  exhaust.rs  func.rs  global.rs  graph.rs  jit.rs  lib.rs  size.rs  state.rs  tir.rs  ty.rs  ty_factory.rs
types/diags/: Cargo.toml
types/mir/: Cargo.toml
types/mir-t/: Cargo.toml
types/packaging-t/: Cargo.toml
types/parsing-t/: Cargo.toml
(+454 files in other folders)
