[package]
name = "catalyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    # "stages/*",
    # "tests/*",
    "types/*",
    "utils/*",
    # "subcommands/*",
    "scripts/*",
]

[dependencies]
# lsp = { version = "0.1.0", path = "subcommands/lsp" }
# cc = { version = "0.1.0", path = "subcommands/cc" }
# cli = { version = "0.1.0", path = "utils/cli" }