[package]
name = "ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "stages/*",
    "tests/*",
    "types/*",
    "utils/*",
    "subcommands/*",
    "scripts/*",
]

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
# debug = 1
# strip = true

[dependencies]
lsp = { version = "0.1.0", path = "subcommands/lsp" }
fmt = { version = "0.1.0", path = "subcommands/fmt" }
cc = { version = "0.1.0", path = "subcommands/cc" }
cli = { version = "0.1.0", path = "utils/cli" }