[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.82.1"
cranelift-frontend = "0.82.1"
cranelift-module = "0.82.1"
cranelift-object = "0.82.1"
cranelift-jit = "0.82.1"
cranelift-native = "0.82.1"
target-lexicon = "0.12.3"
cc = "1.0.73"
num_cpus = "1.13.1"

lexer = { path = "../lexer" }
errors = { path = "../errors" }
parser = { path = "../parser" }
ast = { path = "../ast" }
modules = { path = "../modules" }
module_types = { path = "../module_types" }
typec = { path = "../typec" }
typec_types = { path = "../typec_types" }
instance = { path = "../instance" }
instance_types = { path = "../instance_types" }
gen = { path = "../gen" }
cli = { path = "../cli" }
storage = { path = "../storage" }
incr = { path = "../incr" }
matching = { path = "../matching" }
ownership = { path = "../ownership" }
lifetimes = { path = "../lifetimes" }