[package]
name = "incr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-module = "0.82.1"
cranelift-object = "0.82.1"
cranelift-codegen = "0.82.1"

storage = { path = "../storage" }
typec_types = { path = "../typec_types" }
lexer = { path = "../lexer" }
module_types = { path = "../module_types" }