[package]
name = "instance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.82.1"
cranelift-module = "0.82.1"


lexer_types = { path = "../lexer_types" }
ast = { path = "../ast" }
module_types = { path = "../module_types" }
typec_types = { path = "../typec_types" }
storage = { path = "../storage" }
errors = { path = "../errors" }
instance_types = { path = "../instance_types" }