[package]
name = "instance_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.82.1"
lexer = { path = "../lexer" }
ast = { path = "../ast" }
module_types = { path = "../module_types" }
typec_types = { path = "../typec_types" }
storage = { path = "../storage" }
errors = { path = "../errors" }