[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../storage" }
typec_types = { path = "../typec_types" }
ownership_types = { path = "../ownership_types" }
errors = { path = "../errors" }
lexer = { path = "../lexer" }