[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = "0.82.1"
storage = { path = "../storage" }
ast = { path = "../ast" }
lexer = { path = "../lexer" }
errors = { path = "../errors" }