[package]
name = "typec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
cranelift-entity = "0.82.1"
lexer = { path = "../lexer" }
parser = { path = "../parser" }
modules = { path = "../modules" }