[package]
name = "typec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.82.1"

errors = { path = "../errors" }
module_types = { path = "../module_types" }
lexer = { path = "../lexer" }
ast = { path = "../ast" }
typec_types = { path = "../typec_types" }
storage = { path = "../storage" }
incr = { path = "../incr" }