[package]
name = "borrowc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diags = { version = "0.1.0", path = "../../types/diags" }
span = { version = "0.1.0", path = "../../types/span" }
mir-t = { version = "0.1.0", path = "../../types/mir-t" }
resources = { version = "0.1.0", path = "../../types/resources" }
storage = { version = "0.1.0", path = "../../utils/storage" }
types = { version = "0.1.0", path = "../../types/types" }
type-creator = { version = "0.1.0", path = "../../utils/type-creator" }

