[package]
name = "lexing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
ansi-coloring = { path = "../../utils/ansi-coloring" }
storage = { path = "../../utils/storage" }
lexing-t = { path = "../../types/lexing-t" }