[package]
name = "packaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }
errors = { path = "../../utils/errors" }

lexing = { path = "../../stages/lexing" }
parsing = { path = "../../stages/parsing" }

packaging-t = { path = "../../types/packaging-t" }
diags = { path = "../../types/diags" }