[package]
name = "packaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }

parsing = { path = "../parsing" }

lexing-t = { path = "../../types/lexing-t" }
lexing = { path = "../../stages/lexing" }
parsing-t = { path = "../../types/parsing-t" }
packaging-t = { path = "../../types/packaging-t" }
diags = { path = "../../types/diags" }