[package]
name = "packaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }

parsing = { path = "../parsing" }

span = { path = "../../types/span" }
lexing = { path = "../../stages/lexing" }
ast = { path = "../../types/ast" }
resources = { path = "../../types/resources" }
diags = { path = "../../types/diags" }