[package]
name = "parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
lexing = { path = "../lexing" }

storage = { path = "../../utils/storage" }
errors = { path = "../../utils/errors" }
scope = { path = "../../utils/scope" }

diags = { path = "../../types/diags" }
lexing-t = { path = "../../types/lexing-t" }
parsing-t = { path = "../../types/parsing-t" }