[package]
name = "parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
lexing = { path = "../lexing" }

storage = { path = "../../utils/storage" }


diags = { path = "../../types/diags" }
span = { path = "../../types/span" }
ast = { path = "../../types/ast" }
resources = { path = "../../types/resources" }