[package]
name = "type-checking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }
scope = { path = "../../utils/scope" }
errors = { path = "../../utils/errors" }

diags = { path = "../../types/diags" }
type-checking-t = { path = "../../types/type-checking-t" }
parsing-t = { path = "../../types/parsing-t" }
packaging-t = { path = "../../types/packaging-t" }
lexing-t = { path = "../../types/lexing-t" }
ansi-coloring = { version = "0.1.0", path = "../../utils/ansi-coloring" }

