[package]
name = "typec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }
diags = { path = "../../types/diags" }
typec-t = { path = "../../types/typec-t" }
parsing-t = { path = "../../types/parsing-t" }
packaging-t = { path = "../../types/packaging-t" }
lexing-t = { path = "../../types/lexing-t" }
lexing = { path = "../../stages/lexing" }
typec-u = { version = "0.1.0", path = "../../utils/typec-u" }
