[package]
name = "typec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }
diags = { path = "../../types/diags" }
types = { path = "../../types/types" }
ast = { path = "../../types/ast" }
resources = { path = "../../types/resources" }
span = { path = "../../types/span" }
lexing = { path = "../../stages/lexing" }
type-creator = { version = "0.1.0", path = "../../utils/type-creator" }
