[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.6.0"
lsp-types = "0.93.2"
middleware = { path = "../middleware" }
serde = "1.0.150"
serde_json = "1.0.89"
notify = "5.0.0"
crossbeam = "0.8.2"