[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diags = { version = "0.1.0", path = "../../types/diags" }
gen = { version = "0.1.0", path = "../../stages/gen" }
mir = { version = "0.1.0", path = "../../stages/mir" }
mir-t = { version = "0.1.0", path = "../../types/mir-t" }
packaging = { version = "0.1.0", path = "../../stages/packaging" }
resources = { version = "0.1.0", path = "../../types/resources" }
parsing = { version = "0.1.0", path = "../../stages/parsing" }
parsing-t = { version = "0.1.0", path = "../../types/parsing-t" }
lexing = { version = "0.1.0", path = "../../stages/lexing" }
graphs = { version = "0.1.0", path = "../../utils/graphs" }
span = { version = "0.1.0", path = "../../types/span" }
snippet-display = { version = "0.1.0", path = "../../utils/snippet-display" }
cli = { version = "0.1.0", path = "../../utils/cli" }

storage = { version = "0.1.0", path = "../../utils/storage" }
typec = { version = "0.1.0", path = "../../stages/typec" }
types = { version = "0.1.0", path = "../../types/types" }
cranelift-codegen = "0.92.0"
cranelift-frontend = "0.92.0"
target-lexicon = "0.12.4"

rkyv = { version = "0.7.39", features = ["copy", "alloc"] }
type-creator = { version = "0.1.0", path = "../../utils/type-creator" }
