[package]
name = "gen-test"
version = "0.1.0"
edition = "2021"

[dependencies]
diags = { version = "0.1.0", path = "../../types/diags" }
gen = { version = "0.1.0", path = "../../stages/gen" }
borrowc = { version = "0.1.0", path = "../../stages/borrowc" }
mir = { version = "0.1.0", path = "../../types/mir" }
packaging = { version = "0.1.0", path = "../../stages/packaging" }
resources = { version = "0.1.0", path = "../../types/resources" }
parsing = { version = "0.1.0", path = "../../stages/parsing" }
ast = { version = "0.1.0", path = "../../types/ast" }
lexing = { version = "0.1.0", path = "../../stages/lexing" }
middleware = { version = "0.1.0", path = "../../subcommands/middleware" }

storage = { version = "0.1.0", path = "../../utils/storage" }
testing = { version = "0.1.0", path = "../../utils/testing" }
typec = { version = "0.1.0", path = "../../stages/typec" }
types = { version = "0.1.0", path = "../../types/types" }
cranelift-codegen = "0.93.0"
cranelift-frontend = "0.93.0"
target-lexicon = "0.12.4"
cc = "1.0.73"
