[package]
name = "parsing-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diags = { version = "0.1.0", path = "../../types/diags" }
lexing = { version = "0.1.0", path = "../../stages/lexing" }
span = { version = "0.1.0", path = "../../types/span" }
packaging = { version = "0.1.0", path = "../../stages/packaging" }
resources = { version = "0.1.0", path = "../../types/resources" }
parsing = { version = "0.1.0", path = "../../stages/parsing" }
parsing-t = { version = "0.1.0", path = "../../types/parsing-t" }
snippet-display = { version = "0.1.0", path = "../../utils/snippet-display" }
storage = { version = "0.1.0", path = "../../utils/storage" }
testing = { version = "0.1.0", path = "../../utils/testing" }
