[package]
name = "type-checking-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diags = { version = "0.1.0", path = "../../types/diags" }
errors = { version = "0.1.0", path = "../../utils/errors" }
packaging = { version = "0.1.0", path = "../../stages/packaging" }
packaging-t = { version = "0.1.0", path = "../../types/packaging-t" }
parsing = { version = "0.1.0", path = "../../stages/parsing" }
parsing-t = { version = "0.1.0", path = "../../types/parsing-t" }
scope = { version = "0.1.0", path = "../../utils/scope" }
storage = { version = "0.1.0", path = "../../utils/storage" }
testing = { version = "0.1.0", path = "../../utils/testing" }
type-checking = { version = "0.1.0", path = "../../stages/type-checking" }
type-checking-t = { version = "0.1.0", path = "../../types/type-checking-t" }
