[package]
name = "typec-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diags = { version = "0.1.0", path = "../../types/diags" }
packaging = { version = "0.1.0", path = "../../stages/packaging" }
packaging-t = { version = "0.1.0", path = "../../types/packaging-t" }
parsing = { version = "0.1.0", path = "../../stages/parsing" }
parsing-t = { version = "0.1.0", path = "../../types/parsing-t" }

storage = { version = "0.1.0", path = "../../utils/storage" }
testing = { version = "0.1.0", path = "../../utils/testing" }
typec = { version = "0.1.0", path = "../../stages/typec" }
types = { version = "0.1.0", path = "../../types/types" }
typec-u = { version = "0.1.0", path = "../../utils/typec-u" }
