[package]
name = "diags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.93.0"
storage = { path = "../../utils/storage" }
ansi-coloring = { path = "../../utils/ansi-coloring" }
lexing-t = { path = "../lexing-t" }
packaging-t = { path = "../packaging-t" }