[package]
name = "mir-t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexing-t = { version = "0.1.0", path = "../lexing-t" }
storage = { version = "0.1.0", path = "../../utils/storage" }
typec-t = { version = "0.1.0", path = "../typec-t" }
serde = { version = "1", features = ["derive", "rc"] }