[package]
name = "mir-t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexing-t = { version = "0.1.0", path = "../lexing-t" }
storage = { version = "0.1.0", path = "../../utils/storage" }
types = { version = "0.1.0", path = "../types" }

rkyv = { version = "0.7.39", features = ["copy"] }
typec-u = { version = "0.1.0", path = "../../utils/typec-u" }
