[package]
name = "mir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
span = { version = "0.1.0", path = "../span" }
storage = { version = "0.1.0", path = "../../utils/storage" }
types = { version = "0.1.0", path = "../types" }

rkyv = { version = "0.7.39", features = ["copy"] }
type-creator = { version = "0.1.0", path = "../../utils/type-creator" }
