[package]
name = "packaging-t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }
graphs = { path = "../../utils/graphs" }
scope = { path = "../../utils/scope" }
lexing-t = { path = "../lexing-t" }
parsing-t = { version = "0.1.0", path = "../parsing-t" }
