[package]
name = "packaging-t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }
graphs = { path = "../../utils/graphs" }

lexing-t = { path = "../lexing-t" }
bytecheck = "0.6.9"
rkyv = { version = "0.7.39", features = ["validation", "copy"] }
