[package]
name = "parsing-t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../../utils/storage" }


lexing = { path = "../../stages/lexing"}

lexing-t = { path = "../lexing-t" }
packaging-t = { path = "../packaging-t" }
diags = { path = "../diags" }